# oz_task

database/day1/: chapter01_06.ipynb
database/day2/: chapter07_13.ipynb
django2/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
django_task/day2/: README.md  db.sqlite3  main.py  pyproject.toml
django_task/day2/config/: settings.py  urls.py
django_task/day2/old_readme/: README.md
django_task/day2/templates/: base.html  pagination.html  todo_create.html  todo_info.html  todo_list.html  todo_update.html
django_task/day2/templates/registration/: form.html  login.html  sign_up.html  signup.html  signup_done.html  verify_failed.html  verify_success.html
django_task/day2/templates/todo/: todo_confirm_delete.html  todo_create.html  todo_form.html  todo_info.html  todo_list.html  todo_update.html
django_task/day2/todo/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
django_task/day2/todo/migrations/: 0001_initial.py  0002_alter_todos_options_todos_author.py  0003_rename_author_todos_user.py  0004_rename_todos_todo.py  0005_comment.py  0006_rename_modified_at_todo_updated_at.py  0007_alter_todo_user.py  0008_todo_completed_image_todo_thumbnail.py
django_task/day2/users/: cb_views.py  forms.py  models.py  urls.py  views.py
django_task/day2/users/migrations/: 0001_initial.py  0002_user_is_superuser.py
django_task/day2/utils/: email.py
fastapi_task/day1/: README.md  main.py  pyproject.toml  temp.py  test_simple.py
js/: hunting_monster.html  join.html  join.js  user_input.html
os/: 1 하드웨어와 프로세스.md  2 프로세스 통신.md  3 메모리.md
(+108 files in other folders)
