[project]
name = "fastapi-study"
version = "0.1.0"
description = ""
authors = [
    {name = "yimiro",email = "s_icay@naver.com"}
]
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==24.10.0)",
    "ruff (==0.8.2)",
    "mypy (==1.13.0)",
    "pytest (==8.3.4)",
    "coverage (==7.6.9)"
]

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"

[tool.mypy]
#plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.coverage.run]
omit = ["*/test_*.py"]